added tn styling

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -420,7 +420,7 @@ h5 {
 }
 
 .select__prompt {
-  height: 2rem;
+  height: 3rem;
   background: var(--accent1);
   width: 67%;
   text-align: center;
@@ -452,6 +452,9 @@ h5 {
   display: flex;
   align-items: center;
 }
+.yesText {
+  background-color: var(--tertiary);
+}
 .select__artistText {
   color: var(--primary);
   position: absolute;
@@ -465,9 +468,12 @@ h5 {
 .btn {
   outline: none;
   border: none;
-  min-height: 1.25rem;
   color: var(--primary);
   cursor: pointer;
+  height: 3rem;
+  width: 7.125rem;
+  font-weight: 600;
+  font-size: 0.875rem;
 }
 .btn-cloudy {
   opacity: 0.5;
@@ -476,7 +482,8 @@ h5 {
 }
 .btn-nonCloudy {
   opacity: 1;
-  transition: 1.5s;
+  transition: 0.75s ease;
+  width: 20rem;
 }
 .btn:hover {
   opacity: 0.9;
@@ -485,16 +492,13 @@ h5 {
 .btn-primary {
   background: var(--accent1);
 
-  border-radius: 5px;
-  width: 7rem;
+  border-radius: 4px;
 }
 .btn-tertiary {
   background: var(--tertiary);
   color: var(--primary);
   border: none;
-  padding: 0 1rem;
   border-radius: 4px;
-  height: 1.5rem;
 }
 .pill {
   border-radius: 100vmax;
@@ -507,12 +511,11 @@ h5 {
   gap: 0.5rem;
 }
 .btn-selected {
-  background: var(--accent2);
-  color: var(--secondary);
+  background: var(--tertiary);
   transition: 250ms ease-in;
+  color: var(--primary);
 }
 .btn-link {
-  min-height: 1.75rem;
   color: var(--primary);
 }
 .btn-outline {
@@ -523,10 +526,8 @@ h5 {
   background: var(--primary);
 }
 .btn-form {
-  width: 67%;
   margin-bottom: 0.5rem;
   text-align: center;
-  height: 2rem;
 }
 .btn-reroll {
   background: none;
@@ -534,20 +535,14 @@ h5 {
   outline: none;
   height: 2rem;
   padding: 0;
-  width: 2rem;
   cursor: pointer;
   position: absolute;
   right: 1rem;
   bottom: 1rem;
 }
-.btn-midi {
-  width: 100%;
-}
+
 .btn-cta {
-  border: none;
-  padding: 0 1rem;
   border-radius: 4px;
-  height: 1.5rem;
 }
 .btn-hamburger {
   width: 80%;
