--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -10,6 +10,7 @@
 }
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 #root {
   min-height: 100vh;
@@ -116,262 +117,7 @@ h5 {
 .uppercase {
   text-transform: uppercase;
 }
-.header {
-  border-bottom: 1px solid var(--line-p);
-  justify-content: center;
-}
-.nav-links-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: none;
-}
-.nav__ul {
-  display: flex;
-}
-.nav__ul li,
-.nav__ul button {
-  margin: 0 1rem;
-  cursor: pointer;
-}
-.logo-wrapper {
-  max-height: 7rem;
-  text-align: center;
-  display: flex;
-  justify-content: center;
 
-  padding: 1rem 0;
-}
-.home-link {
-  width: 4em;
-}
-.homepage-logo-wrapper {
-  width: 100%;
-  text-align: center;
-  display: none;
-}
-.homepage-logo {
-  max-height: 7rem;
-}
-.logo-full {
-  display: none;
-  height: 100%;
-}
-.logo-small {
-  height: 100%;
-}
-.hamburger-wrapper {
-  position: absolute;
-  left: 1.25rem;
-  top: 2rem;
-  height: 4em;
-  z-index: 1002;
-}
-.hamburger-wrapper:hover {
-  cursor: pointer;
-}
-.hamburger__line {
-  background: var(--black);
-  width: 2.5rem;
-  height: 0.25rem;
-  margin: 0.5rem 0;
-  border-radius: 100vmax;
-}
-.hamburger__lineOpen {
-  background: var(--primary);
-  transition: 125ms ease-in;
-}
-.hamburger__open {
-  transform: rotate(90deg);
-  transition: 250ms ease-in;
-}
-
-.hamburger__close {
-  transform: rotate(0);
-  transition: 250ms ease-in;
-}
-
-.hamburger-links-wrapper {
-  background: var(--accent1);
-  color: var(--primary);
-  position: fixed;
-  top: 0;
-  height: 100vh;
-  z-index: 1001;
-  width: 50%;
-  animation-name: hamburger;
-  animation-duration: 250ms;
-  animation-timing-function: ease-out;
-}
-
-@keyframes hamburger {
-  0% {
-    width: 0;
-  }
-  100% {
-    width: 50%;
-    color: var(--accent2);
-  }
-}
-
-.hamNav__list,
-.hamNav__list2 {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-}
-.hamNav__list {
-  margin-top: 10rem;
-}
-.hamNav__list2 {
-  margin-top: 2rem;
-}
-.hamNav__li {
-  padding: 0.5rem 0 0.5rem 1rem;
-  color: var(--primary);
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: flex-start;
-}
-.hamNav__a {
-  color: var(--primary) G;
-}
-.hamNav__footer {
-  background-color: var(--accent1);
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 10rem;
-  text-align: center;
-}
-.hamNav__li:hover {
-  background: var(--accent2);
-  color: var(--black);
-  transition: 120ms ease-in-out;
-}
-.selected__nav {
-  color: var(--tertiary);
-}
-/* Header style end */
-.hs-container {
-  padding: 2rem 0;
-  position: relative;
-  padding-bottom: 2.5rem;
-}
-.hs-hook-wrapper {
-  display: flex;
-  flex-direction: column;
-  margin-left: 1rem;
-  position: relative;
-  margin-right: 1rem;
-}
-.hs-shape-wrapper {
-  display: none;
-}
-.hs__shape {
-  z-index: -1;
-}
-.hs__header {
-  margin-bottom: 1rem;
-}
-
-.hs-text-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-}
-.hs__sub-header {
-  color: var(--tertiary);
-  margin-bottom: 1rem;
-}
-.hs__text {
-  margin-bottom: 0.5rem;
-}
-
-.hs-columns-wrapper {
-  display: flex;
-  flex-direction: column;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-bottom: 2.5rem;
-}
-.hs-column-wrapper {
-  margin: 3rem 1rem 0;
-}
-.hs__column-header {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-.hs-train-container {
-  background: var(--accent2);
-  padding: 3rem 1rem 8rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.hs-train-header-wrapper {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  margin-bottom: 0.5rem;
-}
-.hs-train-text-wrapper {
-  padding-bottom: 1rem;
-}
-.hs__train-header {
-  color: var(--tertiary);
-}
-.hs__train-sub-header {
-  font-size: 1.125rem;
-  color: var(--black);
-}
-.hs__train-img-wrapper {
-  width: 100%;
-  height: 15rem;
-  text-align: center;
-}
-.hs__train-img {
-  object-fit: cover;
-  height: 100%;
-  border-radius: 50%;
-  border: 0.75px solid var(--accent1);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 10px;
-}
-.hs-train-card-wrapper {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  row-gap: 1rem;
-  justify-items: center;
-  margin-top: 3rem;
-}
-.hs__train-card {
-  color: var(--primary);
-  width: 60%;
-  border-radius: 5px;
-  text-align: center;
-  padding: 1.5rem 0.75rem 0;
-}
-.hs__card-header {
-  margin-bottom: 1rem;
-}
-.hs__card-icon,
-.hs__card-text {
-  color: var(--primary);
-}
-.hs__card-icon {
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
-}
-.hs__card-text {
-  text-align: left;
-  padding-bottom: 2.5rem;
-}
-/* Homescreen style begin */
-
-/* Homescreen style end */
 /* Train select style begin */
 .artist-mode-container {
   margin-top: 5.5rem;
@@ -878,51 +624,6 @@ h5 {
     margin: 5.5rem 8rem;
   }
 
-  /* Homescreen style  */
-  .hs-hook-wrapper {
-    margin-left: 4rem;
-    margin-right: 4rem;
-  }
-  .hs-text-wrapper {
-    width: 45%;
-  }
-  .hs__train-text {
-    width: 100%;
-  }
-  .hs-columns-wrapper {
-    margin-left: 4rem;
-    margin-right: 4rem;
-  }
-  .hs-columns-wrapper {
-    flex-direction: row;
-  }
-  .hs__column-header {
-    text-align: left;
-  }
-  .hs__column-text {
-    width: 80%;
-  }
-  .hs-train-container {
-    padding: 3rem 4rem 10rem;
-    position: relative;
-  }
-  .hs-train-text-img-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .hs__train-img-wrapper {
-  }
-  .hs__train-img {
-    height: 14rem;
-  }
-  .hs-train-card-wrapper {
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .hs__train-card {
-    width: 80%;
-  }
-
   /* Select train style */
   .selected__imgWrapper {
     height: 12rem;
@@ -980,83 +681,7 @@ h5 {
     justify-content: center;
     padding-bottom: 2rem;
   }
-  /* Homescreen style  */
-  .hs-shape-wrapper {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 28.5rem;
-    width: 40rem;
-  }
-  .hs__shape {
-    position: relative;
-    height: 100%;
-    width: 100%;
-  }
-  .hs-shape-img-wrapper {
-    position: absolute;
-    top: 4rem;
-    right: 7rem;
-    height: 21rem;
-    width: 21rem;
-  }
-  .hs__shape-img {
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-    width: 100%;
-  }
-  .hs-hook-wrapper {
-    height: 18rem;
-    margin-top: 7rem;
-  }
-  .hs-hook-wrapper,
-  .hs-columns-wrapper {
-    margin-left: 8rem;
-    margin-right: 8rem;
-  }
 
-  .hs-columns-wrapper {
-    margin-bottom: 7.5rem;
-    margin-top: 4.5rem;
-  }
-  .hs-column-wrapper {
-    margin: 3rem 3rem 0 0;
-  }
-  .hs-train-header-wrapper {
-    margin-bottom: 2rem;
-  }
-  .hs__text {
-    margin-bottom: 1rem;
-  }
-  .hs__train-text {
-    width: 90%;
-  }
-  .hs-train-container {
-    padding: 3rem 8rem 10rem;
-    position: relative;
-  }
-  .hs__train-header {
-    font-size: 2.5rem;
-  }
-  .hs__train-text {
-    font-size: 0.875rem;
-  }
-  .hs-train-card-wrapper {
-    margin-top: 4rem;
-    column-gap: 4rem;
-    justify-content: space-between;
-  }
-  .hs__train-card {
-    width: 12rem;
-  }
-  .hs__train-img-wrapper {
-    height: 21rem;
-  }
-  .hs__train-img {
-    height: 21rem;
-  }
   /* Login/signup style */
   .login-form-wrapper {
     margin: 5.5rem 12rem;
@@ -1145,62 +770,7 @@ h5 {
   .header {
     padding: 0 5rem;
   }
-  /* Homescreen style  */
-  .hs-shape-wrapper {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 28.5rem;
-    width: 50rem;
-  }
-  .hs__shape {
-    position: relative;
-    height: 100%;
-    width: 100%;
-  }
-  .hs-shape-img-wrapper {
-    position: absolute;
-    top: 4rem;
-    right: 14rem;
-    height: 21rem;
-    width: 21rem;
-  }
-  .hs__shape-img {
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-    width: 100%;
-  }
-  .hs-hook-wrapper {
-    height: 18rem;
-    margin-top: 7rem;
-  }
-  .hs-hook-wrapper,
-  .hs-columns-wrapper {
-    margin-left: 16rem;
-    margin-right: 16rem;
-  }
 
-  .hs-train-container {
-    padding: 3rem 16rem 12rem;
-  }
-  .hs__train-header {
-    font-size: 2.5rem;
-  }
-  .hs__train-text {
-    font-size: 0.875rem;
-  }
-  .hs-train-card-wrapper {
-    margin-top: 4rem;
-  }
-
-  .hs__train-img-wrapper {
-    height: 21rem;
-  }
-  .hs__train-img {
-    height: 21rem;
-  }
   /* Login/signup style */
   .login-form-wrapper {
     margin: 10rem 30rem;
