--- a/src/assets/Train.css
+++ b/src/assets/Train.css
@@ -36,6 +36,9 @@ html {
   background: var(--accent2);
   text-align: center;
 }
+.extra-bottom-padding {
+  padding-bottom: 4rem;
+}
 
 .train-container {
   width: 100%;
@@ -163,7 +166,7 @@ html {
   width: 100%;
   padding: 0 var(--margin-small);
   grid-template-rows: repeat(1, 1fr);
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(12, 1fr);
   column-gap: 1rem;
   row-gap: 1rem;
   overflow: scroll;
